# emc

./: Cargo.toml  README.md
libs/cli/: Cargo.toml
libs/cli/src/: lib.rs
libs/server/: .gitignore  Cargo.toml
libs/server/src/: lib.rs
