[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["kaisic1224"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
termcolor = "1.2.0"
youtube_dl = "0.8.1"
